traces/bug_144.txt
examples++-load/gmsh.cpp:314: error: DEAD_STORE
  The value written to &partition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:314:21: Write of unused value
312.   		  if(j == 0)      physical = tag;
313.   		  else if(j == 1) elementary = tag;
314.   		  else if(j == 2) partition = tag;
                           ^
315.   		  // ignore any other tags for now
316.   		}
